--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *https://github.com/Dennis-DW/Web3.0_wambcrypt.git filter=lfs diff=lfs merge=lfs -text
+client/* filter=lfs diff=lfs merge=lfs -text
+smart_contracts/* filter=lfs diff=lfs merge=lfs -text
